--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -2,3 +2,18 @@
     background-color: #ffc0cb;
     font-family: "Verdana", "DejaVu Sans", sans-serif;
 }
+
+.odd-number.third-element {
+    font-size: 24px;
+}
+
+#second-element {
+    color: #0000ff;
+    font-size: 36px;
+}
+
+#fourth-element {
+    background-color: rgb(116, 240, 116);
+    font-size: 24px;
+    font-weight: bold;
+}
